--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    {% include head.html %}
+{% include head.html %}
 
-    <body ontouchstart="">
+<!-- hack iOS CSS :active style -->
+<body ontouchstart="">
 
-    	{% include nav.html %}
+    {% include nav.html %}
+    {% include search.html %}
 
-    	{{ content }}
+    {{ content }}
 
-    	{% include footer.html %}
+    {% include footer.html %}
 
-    </body>
+
+<!-- Image to hack wechat -->
+<img src="/img/icon_wechat.png" width="0" height="0" />
+<!-- Migrate from head to bottom, no longer block render and still work -->
+
+</body>
 
 </html>
