修复：删除英语
rt

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -283,7 +283,7 @@
         resultsContainer: document.getElementById('search-results'),
         json: '/search.json',
         searchResultTemplate: '<div class="post-preview item"><a href="{url}"><h2 class="post-title">{title}</h2><h3 class="post-subtitle">{subtitle}</h3><hr></a></div>',
-        noResultsText: 'No results',
+        noResultsText: '未找到相关结果',
         limit: 50,
         fuzzy: false,
         // a hack to get escaped subtitle unescaped. for some reason, 
