--- a/_includes/head.html
+++ b/_includes/head.html
@@ -70,9 +70,9 @@
     <script data-ad-client="ca-pub-6487568398225121" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!--志哀-->
-    <style type="text/css">
+    <!--<style type="text/css">
         html {
         filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
         -webkit-filter: grayscale(100%);}
-    </style>
+    </style>-->
 </head>
