--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,8 @@
                 {% include sns-links.html center=true %}
 
                 <p class="copyright text-muted">
-                    {{ site.title }} &copy; 2018-{{ site.time | date: '%Y' }} 保留所有权利。
+                    {{ site.title }} 版权所有。
+                    <!--{{ site.title }} &copy; 2018-{{ site.time | date: '%Y' }} 保留所有权利。-->
                     <br>
                     本页面由哈儿实验室外事活动部发布
                     </iframe>
